--- a/src/langs/seclusion/syntax.txt
+++ b/src/langs/seclusion/syntax.txt
@@ -42,7 +42,7 @@ bridge{ "*" s0 arr }
 
 whitespace{ [ \r\n\t] }
 comment{ inlineComment | multilineComment }
-inlineComment{ "//" [^\r\n\t]* }
+inlineComment{ "//" [^\r\n]* }
 multilineComment{ "/*" .*? "*/"}
 
 s{ whitespace | comment | "|" }
