--- a/src/langs/blank/syntax.txt
+++ b/src/langs/blank/syntax.txt
@@ -2,7 +2,7 @@ script{ s0 }
 
 whitespace{ [ \r\n\t] }
 comment{ inlineComment | multilineComment }
-inlineComment{ "//" [^\r\n\t]* }
+inlineComment{ "//" [^\r\n]* }
 multilineComment{ "/*" .*? "*/"}
 
 s{ whitespace | comment}
