--- a/src/langs/bip/syntax.txt
+++ b/src/langs/bip/syntax.txt
@@ -20,7 +20,7 @@ if{ "if"i s1 expr s1 "then"i s1 stat s1 "and end"i s1 ifOrElseStr else? }
 else{ s1 ifComment? s0 "else"i s1 elseBody }
 elseBody{ stat | "then"i s1 stat s1 "end else"i }
 ifOrElseStr{ "if"i | "else"i }
-ifComment{ "and "i inlineComment }
+ifComment{ "and"i whitespace+ inlineComment }
 
 for{
   "for"i s0 "(" s0 "initialization is"i s1 assignment s1
@@ -91,6 +91,6 @@ multilineComment{ "block-comment is"i commentBody }
 commentBody{ s1 .*? s0 commentEnd | s0 .*? s1 commentEnd }
 commentEnd{ "and end block-comment"i }
 
-s{ whitespace | comment}
+s{ whitespace | comment }
 s0{ s* }
 s1{ s+ }
