--- a/src/langs/meadow/syntax.txt
+++ b/src/langs/meadow/syntax.txt
@@ -36,11 +36,12 @@ template{ type }
 funcDef{
   ident s0
   formalArgs? s0
-  ":" s0 expr
+  funcBody?
 }
 
 formalArgs{ "(" s0 formalArg*commaSep s0 ")" }
 formalArg{ type s0 ident? }
+funcBody{ ":" s0 expr }
 
 expr{
   invocation |
