--- a/src/langs/sunny-morning/syntax.txt
+++ b/src/langs/sunny-morning/syntax.txt
@@ -5,13 +5,15 @@ def{ ident s0 op }
 op{
   construct |
   extract |
-  cond |
+  cond1 |
+  cond2 |
   inv
 }
 
 construct{ bit s0 ident s1 ident }
 extract{ leftOrRight s0 ident }
-cond{ "?" s0 ident s1 ident }
+cond1{ "?" s0 ident s1 ident }
+cond2{ "*" s0 ident s1 ident s1 ident }
 inv{ "." s0 ident s1 ident }
 
 bit{ [01] }
