--- a/src/langs/entrance/syntax.txt
+++ b/src/langs/entrance/syntax.txt
@@ -24,7 +24,7 @@ premises{ expr*commaSep s0 "|-" s0 }
 expr{ ident args? }
 args{ "(" s0 expr*commaSep s0 ")" }
 
-ident{ [a-zA-Z0-9_]+ }
+ident{ [a-zA-Z_]+ }
 
 commaSep{ s0 "," s0 }
 
