--- a/src/langs/daydream/syntax.txt
+++ b/src/langs/daydream/syntax.txt
@@ -27,37 +27,37 @@ asmRegName{
 }
 
 asmInst{
-  "neg"i   !letter s0 asmElem{1}
-  "inc"i   !letter s0 asmElem{1}
-  "dec"i   !letter s0 asmElem{1}
-  "and"i   !letter s0 asmElem{2}
-  "or"i    !letter s0 asmElem{2}
-  "xor"i   !letter s0 asmElem{2}
-  "shl"i   !letter s0 asmElem{2}
-  "shr"i   !letter s0 asmElem{2}
-  "add"i   !letter s0 asmElem{2}
-  "sub"i   !letter s0 asmElem{2}
-  "mul"i   !letter s0 asmElem{2}
-  "div"i   !letter s0 asmElem{2}
-  "eq"i    !letter s0 asmElem{2}
-  "neq"i   !letter s0 asmElem{2}
-  "lt"i    !letter s0 asmElem{2}
-  "lte"i   !letter s0 asmElem{2}
-  "push"i  !letter s0 asmElem{1}
-  "pop"i   !letter s0 asmElem{1}
-  "get"i   !letter s0 asmElem{1}
-  "set"i   !letter s0 asmElem{2}
-  "geta"i  !letter s0 asmElem{1}
-  "seta"i  !letter s0 asmElem{2}
-  "getv"i  !letter s0 asmElem{1}
-  "setv"i  !letter s0 asmElem{2}
-  "gets"i  !letter s0 asmElem{1}
-  "sets"i  !letter s0 asmElem{2}
-  "copy"i  !letter s0 asmElem{3}
-  "if"i    !letter s0 asmElem{1}
-  "jmp"i   !letter s0 asmElem{1}
-  "call"i  !letter s0 asmElem{1}
-  "enter"i !letter s0 asmElem{1}
+  "neg"i   !letter s0 asmElem{1} |
+  "inc"i   !letter s0 asmElem{1} |
+  "dec"i   !letter s0 asmElem{1} |
+  "and"i   !letter s0 asmElem{2} |
+  "or"i    !letter s0 asmElem{2} |
+  "xor"i   !letter s0 asmElem{2} |
+  "shl"i   !letter s0 asmElem{2} |
+  "shr"i   !letter s0 asmElem{2} |
+  "add"i   !letter s0 asmElem{2} |
+  "sub"i   !letter s0 asmElem{2} |
+  "mul"i   !letter s0 asmElem{2} |
+  "div"i   !letter s0 asmElem{2} |
+  "eq"i    !letter s0 asmElem{2} |
+  "neq"i   !letter s0 asmElem{2} |
+  "lt"i    !letter s0 asmElem{2} |
+  "lte"i   !letter s0 asmElem{2} |
+  "push"i  !letter s0 asmElem{1} |
+  "pop"i   !letter s0 asmElem{1} |
+  "get"i   !letter s0 asmElem{1} |
+  "set"i   !letter s0 asmElem{2} |
+  "geta"i  !letter s0 asmElem{1} |
+  "seta"i  !letter s0 asmElem{2} |
+  "getv"i  !letter s0 asmElem{1} |
+  "setv"i  !letter s0 asmElem{2} |
+  "gets"i  !letter s0 asmElem{1} |
+  "sets"i  !letter s0 asmElem{2} |
+  "copy"i  !letter s0 asmElem{3} |
+  "if"i    !letter s0 asmElem{1} |
+  "jmp"i   !letter s0 asmElem{1} |
+  "call"i  !letter s0 asmElem{1} |
+  "enter"i !letter s0 asmElem{1} |
   "leave"i !letter s0 asmElem{2}
 }
 
